SimpleIRParser.cpp

// Generated from SimpleIR.g4 by ANTLR 4.10


#include "SimpleIRListener.h"

#include "SimpleIRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SimpleIRParserStaticData final {
  SimpleIRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SimpleIRParserStaticData(const SimpleIRParserStaticData&) = delete;
  SimpleIRParserStaticData(SimpleIRParserStaticData&&) = delete;
  SimpleIRParserStaticData& operator=(const SimpleIRParserStaticData&) = delete;
  SimpleIRParserStaticData& operator=(SimpleIRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag simpleirParserOnceFlag;
SimpleIRParserStaticData *simpleirParserStaticData = nullptr;

void simpleirParserInitialize() {
  assert(simpleirParserStaticData == nullptr);
  auto staticData = std::make_unique<SimpleIRParserStaticData>(
    std::vector<std::string>{
      "unit", "function", "localVariables", "parameters", "returnStatement", 
      "end", "statement", "operation", "assign", "dereference", "reference", 
      "assignDereference", "call", "label", "gotoStatement", "ifGoto"
    },
    std::vector<std::string>{
      "", "'function'", "'localVariables'", "'parameters'", "'return'", 
      "'end'", "':='", "'&'", "'call'", "':'", "'goto'", "'if'", "", "", 
      "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'!='", "'<'", "'<='", "'>'", 
      "'>='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "NAME", "NUM", "PLUS", 
      "MINUS", "STAR", "SLASH", "PERCENT", "EQ", "NEQ", "LT", "LTE", "GT", 
      "GTE", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  simpleirParserStaticData = staticData.release();
}

}

SimpleIRParser::SimpleIRParser(TokenStream *input) : SimpleIRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SimpleIRParser::SimpleIRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SimpleIRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *simpleirParserStaticData->atn, simpleirParserStaticData->decisionToDFA, simpleirParserStaticData->sharedContextCache, options);
}

SimpleIRParser::~SimpleIRParser() {
  delete _interpreter;
}

const atn::ATN& SimpleIRParser::getATN() const {
  return *simpleirParserStaticData->atn;
}

std::string SimpleIRParser::getGrammarFileName() const {
  return "SimpleIR.g4";
}

const std::vector<std::string>& SimpleIRParser::getRuleNames() const {
  return simpleirParserStaticData->ruleNames;
}

const dfa::Vocabulary& SimpleIRParser::getVocabulary() const {
  return simpleirParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SimpleIRParser::getSerializedATN() const {
  return simpleirParserStaticData->serializedATN;
}


//----------------- UnitContext ------------------------------------------------------------------

SimpleIRParser::UnitContext::UnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleIRParser::FunctionContext* SimpleIRParser::UnitContext::function() {
  return getRuleContext<SimpleIRParser::FunctionContext>(0);
}


size_t SimpleIRParser::UnitContext::getRuleIndex() const {
  return SimpleIRParser::RuleUnit;
}

void SimpleIRParser::UnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnit(this);
}

void SimpleIRParser::UnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnit(this);
}

SimpleIRParser::UnitContext* SimpleIRParser::unit() {
  UnitContext *_localctx = _tracker.createInstance<UnitContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleIRParser::RuleUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    function();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

SimpleIRParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleIRParser::ReturnStatementContext* SimpleIRParser::FunctionContext::returnStatement() {
  return getRuleContext<SimpleIRParser::ReturnStatementContext>(0);
}

SimpleIRParser::EndContext* SimpleIRParser::FunctionContext::end() {
  return getRuleContext<SimpleIRParser::EndContext>(0);
}

tree::TerminalNode* SimpleIRParser::FunctionContext::NAME() {
  return getToken(SimpleIRParser::NAME, 0);
}

SimpleIRParser::LocalVariablesContext* SimpleIRParser::FunctionContext::localVariables() {
  return getRuleContext<SimpleIRParser::LocalVariablesContext>(0);
}

SimpleIRParser::ParametersContext* SimpleIRParser::FunctionContext::parameters() {
  return getRuleContext<SimpleIRParser::ParametersContext>(0);
}

std::vector<SimpleIRParser::StatementContext *> SimpleIRParser::FunctionContext::statement() {
  return getRuleContexts<SimpleIRParser::StatementContext>();
}

SimpleIRParser::StatementContext* SimpleIRParser::FunctionContext::statement(size_t i) {
  return getRuleContext<SimpleIRParser::StatementContext>(i);
}


size_t SimpleIRParser::FunctionContext::getRuleIndex() const {
  return SimpleIRParser::RuleFunction;
}

void SimpleIRParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void SimpleIRParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

SimpleIRParser::FunctionContext* SimpleIRParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 2, SimpleIRParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    match(SimpleIRParser::T__0);
    setState(35);
    antlrcpp::downCast<FunctionContext *>(_localctx)->functionName = match(SimpleIRParser::NAME);
    setState(37);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleIRParser::T__1) {
      setState(36);
      localVariables();
    }
    setState(40);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleIRParser::T__2) {
      setState(39);
      parameters();
    }
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SimpleIRParser::T__9)
      | (1ULL << SimpleIRParser::T__10)
      | (1ULL << SimpleIRParser::NAME)
      | (1ULL << SimpleIRParser::STAR))) != 0)) {
      setState(42);
      statement();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(48);
    returnStatement();
    setState(49);
    end();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalVariablesContext ------------------------------------------------------------------

SimpleIRParser::LocalVariablesContext::LocalVariablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleIRParser::LocalVariablesContext::NAME() {
  return getTokens(SimpleIRParser::NAME);
}

tree::TerminalNode* SimpleIRParser::LocalVariablesContext::NAME(size_t i) {
  return getToken(SimpleIRParser::NAME, i);
}


size_t SimpleIRParser::LocalVariablesContext::getRuleIndex() const {
  return SimpleIRParser::RuleLocalVariables;
}

void SimpleIRParser::LocalVariablesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocalVariables(this);
}

void SimpleIRParser::LocalVariablesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocalVariables(this);
}

SimpleIRParser::LocalVariablesContext* SimpleIRParser::localVariables() {
  LocalVariablesContext *_localctx = _tracker.createInstance<LocalVariablesContext>(_ctx, getState());
  enterRule(_localctx, 4, SimpleIRParser::RuleLocalVariables);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(SimpleIRParser::T__1);
    setState(53); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(52);
              antlrcpp::downCast<LocalVariablesContext *>(_localctx)->nameToken = match(SimpleIRParser::NAME);
              antlrcpp::downCast<LocalVariablesContext *>(_localctx)->variables.push_back(antlrcpp::downCast<LocalVariablesContext *>(_localctx)->nameToken);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(55); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersContext ------------------------------------------------------------------

SimpleIRParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleIRParser::ParametersContext::NAME() {
  return getTokens(SimpleIRParser::NAME);
}

tree::TerminalNode* SimpleIRParser::ParametersContext::NAME(size_t i) {
  return getToken(SimpleIRParser::NAME, i);
}


size_t SimpleIRParser::ParametersContext::getRuleIndex() const {
  return SimpleIRParser::RuleParameters;
}

void SimpleIRParser::ParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameters(this);
}

void SimpleIRParser::ParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameters(this);
}

SimpleIRParser::ParametersContext* SimpleIRParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 6, SimpleIRParser::RuleParameters);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(SimpleIRParser::T__2);
    setState(59); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(58);
              antlrcpp::downCast<ParametersContext *>(_localctx)->nameToken = match(SimpleIRParser::NAME);
              antlrcpp::downCast<ParametersContext *>(_localctx)->formals.push_back(antlrcpp::downCast<ParametersContext *>(_localctx)->nameToken);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(61); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

SimpleIRParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleIRParser::ReturnStatementContext::NAME() {
  return getToken(SimpleIRParser::NAME, 0);
}

tree::TerminalNode* SimpleIRParser::ReturnStatementContext::NUM() {
  return getToken(SimpleIRParser::NUM, 0);
}


size_t SimpleIRParser::ReturnStatementContext::getRuleIndex() const {
  return SimpleIRParser::RuleReturnStatement;
}

void SimpleIRParser::ReturnStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStatement(this);
}

void SimpleIRParser::ReturnStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStatement(this);
}

SimpleIRParser::ReturnStatementContext* SimpleIRParser::returnStatement() {
  ReturnStatementContext *_localctx = _tracker.createInstance<ReturnStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleIRParser::RuleReturnStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(SimpleIRParser::T__3);
    setState(64);
    antlrcpp::downCast<ReturnStatementContext *>(_localctx)->operand = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == SimpleIRParser::NAME

    || _la == SimpleIRParser::NUM)) {
      antlrcpp::downCast<ReturnStatementContext *>(_localctx)->operand = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EndContext ------------------------------------------------------------------

SimpleIRParser::EndContext::EndContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SimpleIRParser::EndContext::getRuleIndex() const {
  return SimpleIRParser::RuleEnd;
}

void SimpleIRParser::EndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEnd(this);
}

void SimpleIRParser::EndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEnd(this);
}

SimpleIRParser::EndContext* SimpleIRParser::end() {
  EndContext *_localctx = _tracker.createInstance<EndContext>(_ctx, getState());
  enterRule(_localctx, 10, SimpleIRParser::RuleEnd);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(SimpleIRParser::T__4);
    setState(67);
    match(SimpleIRParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SimpleIRParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleIRParser::AssignContext* SimpleIRParser::StatementContext::assign() {
  return getRuleContext<SimpleIRParser::AssignContext>(0);
}

SimpleIRParser::DereferenceContext* SimpleIRParser::StatementContext::dereference() {
  return getRuleContext<SimpleIRParser::DereferenceContext>(0);
}

SimpleIRParser::ReferenceContext* SimpleIRParser::StatementContext::reference() {
  return getRuleContext<SimpleIRParser::ReferenceContext>(0);
}

SimpleIRParser::AssignDereferenceContext* SimpleIRParser::StatementContext::assignDereference() {
  return getRuleContext<SimpleIRParser::AssignDereferenceContext>(0);
}

SimpleIRParser::OperationContext* SimpleIRParser::StatementContext::operation() {
  return getRuleContext<SimpleIRParser::OperationContext>(0);
}

SimpleIRParser::CallContext* SimpleIRParser::StatementContext::call() {
  return getRuleContext<SimpleIRParser::CallContext>(0);
}

SimpleIRParser::LabelContext* SimpleIRParser::StatementContext::label() {
  return getRuleContext<SimpleIRParser::LabelContext>(0);
}

SimpleIRParser::GotoStatementContext* SimpleIRParser::StatementContext::gotoStatement() {
  return getRuleContext<SimpleIRParser::GotoStatementContext>(0);
}

SimpleIRParser::IfGotoContext* SimpleIRParser::StatementContext::ifGoto() {
  return getRuleContext<SimpleIRParser::IfGotoContext>(0);
}


size_t SimpleIRParser::StatementContext::getRuleIndex() const {
  return SimpleIRParser::RuleStatement;
}

void SimpleIRParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void SimpleIRParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

SimpleIRParser::StatementContext* SimpleIRParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, SimpleIRParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(69);
      assign();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(70);
      dereference();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(71);
      reference();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(72);
      assignDereference();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(73);
      operation();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(74);
      call();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(75);
      label();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(76);
      gotoStatement();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(77);
      ifGoto();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperationContext ------------------------------------------------------------------

SimpleIRParser::OperationContext::OperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleIRParser::OperationContext::NAME() {
  return getTokens(SimpleIRParser::NAME);
}

tree::TerminalNode* SimpleIRParser::OperationContext::NAME(size_t i) {
  return getToken(SimpleIRParser::NAME, i);
}

std::vector<tree::TerminalNode *> SimpleIRParser::OperationContext::NUM() {
  return getTokens(SimpleIRParser::NUM);
}

tree::TerminalNode* SimpleIRParser::OperationContext::NUM(size_t i) {
  return getToken(SimpleIRParser::NUM, i);
}

tree::TerminalNode* SimpleIRParser::OperationContext::PLUS() {
  return getToken(SimpleIRParser::PLUS, 0);
}

tree::TerminalNode* SimpleIRParser::OperationContext::MINUS() {
  return getToken(SimpleIRParser::MINUS, 0);
}

tree::TerminalNode* SimpleIRParser::OperationContext::STAR() {
  return getToken(SimpleIRParser::STAR, 0);
}

tree::TerminalNode* SimpleIRParser::OperationContext::SLASH() {
  return getToken(SimpleIRParser::SLASH, 0);
}

tree::TerminalNode* SimpleIRParser::OperationContext::PERCENT() {
  return getToken(SimpleIRParser::PERCENT, 0);
}


size_t SimpleIRParser::OperationContext::getRuleIndex() const {
  return SimpleIRParser::RuleOperation;
}

void SimpleIRParser::OperationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOperation(this);
}

void SimpleIRParser::OperationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOperation(this);
}

SimpleIRParser::OperationContext* SimpleIRParser::operation() {
  OperationContext *_localctx = _tracker.createInstance<OperationContext>(_ctx, getState());
  enterRule(_localctx, 14, SimpleIRParser::RuleOperation);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    antlrcpp::downCast<OperationContext *>(_localctx)->variable = match(SimpleIRParser::NAME);
    setState(81);
    match(SimpleIRParser::T__5);
    setState(82);
    antlrcpp::downCast<OperationContext *>(_localctx)->operand1 = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == SimpleIRParser::NAME

    || _la == SimpleIRParser::NUM)) {
      antlrcpp::downCast<OperationContext *>(_localctx)->operand1 = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(83);
    antlrcpp::downCast<OperationContext *>(_localctx)->operatorKind = _input->LT(1);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SimpleIRParser::PLUS)
      | (1ULL << SimpleIRParser::MINUS)
      | (1ULL << SimpleIRParser::STAR)
      | (1ULL << SimpleIRParser::SLASH)
      | (1ULL << SimpleIRParser::PERCENT))) != 0))) {
      antlrcpp::downCast<OperationContext *>(_localctx)->operatorKind = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(84);
    antlrcpp::downCast<OperationContext *>(_localctx)->operand2 = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == SimpleIRParser::NAME

    || _la == SimpleIRParser::NUM)) {
      antlrcpp::downCast<OperationContext *>(_localctx)->operand2 = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

SimpleIRParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleIRParser::AssignContext::NAME() {
  return getTokens(SimpleIRParser::NAME);
}

tree::TerminalNode* SimpleIRParser::AssignContext::NAME(size_t i) {
  return getToken(SimpleIRParser::NAME, i);
}

tree::TerminalNode* SimpleIRParser::AssignContext::NUM() {
  return getToken(SimpleIRParser::NUM, 0);
}


size_t SimpleIRParser::AssignContext::getRuleIndex() const {
  return SimpleIRParser::RuleAssign;
}

void SimpleIRParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}

void SimpleIRParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}

SimpleIRParser::AssignContext* SimpleIRParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 16, SimpleIRParser::RuleAssign);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    antlrcpp::downCast<AssignContext *>(_localctx)->variable = match(SimpleIRParser::NAME);
    setState(87);
    match(SimpleIRParser::T__5);
    setState(88);
    antlrcpp::downCast<AssignContext *>(_localctx)->operand = _input->LT(1);
    _la = _input->LA(1);
    if (!(_la == SimpleIRParser::NAME

    || _la == SimpleIRParser::NUM)) {
      antlrcpp::downCast<AssignContext *>(_localctx)->operand = _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DereferenceContext ------------------------------------------------------------------

SimpleIRParser::DereferenceContext::DereferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleIRParser::DereferenceContext::STAR() {
  return getToken(SimpleIRParser::STAR, 0);
}

std::vector<tree::TerminalNode *> SimpleIRParser::DereferenceContext::NAME() {
  return getTokens(SimpleIRParser::NAME);
}

tree::TerminalNode* SimpleIRParser::DereferenceContext::NAME(size_t i) {
  return getToken(SimpleIRParser::NAME, i);
}


size_t SimpleIRParser::DereferenceContext::getRuleIndex() const {
  return SimpleIRParser::RuleDereference;
}

void SimpleIRParser::DereferenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDereference(this);
}

void SimpleIRParser::DereferenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SimpleIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDereference(this);
}

SimpleIRParser::DereferenceContext* SimpleIRParser::dereference() {
  DereferenceContext *_localctx = _tracker.createInstance<DereferenceContext>(_ctx, getState());
  enterRule(_localctx, 18, SimpleIRParser::RuleDereference);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    antlrcpp::downCast<DereferenceContext *>(_localctx)->variable = match(SimpleIRParser::NAME);
    setState(91);
    match(SimpleIRParser::T__5);
    setState(92);
    match(SimpleIRParser::STAR);
    setState(93);
    antlrcpp::downCast<DereferenceContext *>(_localctx)->operand = match(SimpleIRParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReferenceContext ------------------------------------------------------------------

SimpleIRParser::ReferenceContext::ReferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleIRParser::ReferenceContext::NAME() {
  return getTokens(SimpleIRParser::NAME);
}

tree::TerminalNode* SimpleIRParser::ReferenceContext::NAME(size_t i) {
  return getToken(SimpleIRParser::NAME, i);
}


size_t SimpleIRParser::ReferenceContext::getRuleIndex() const {
  return SimpleIRParser::RuleReference;
}
